--- a/ProgramacaoConcorrenteUi-master/ProgramacaoConcorrenteUi-master/app/build.gradle
+++ b/ProgramacaoConcorrenteUi-master/ProgramacaoConcorrenteUi-master/app/build.gradle
@@ -4,13 +4,11 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-apply plugin: 'kotlin-kapt'
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "br.edu.ifsp.scl.todolistsdm"
+        applicationId "br.edu.ifsp.scl.programacaoconcorrenteui"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
@@ -29,27 +27,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // Toolbar
-    implementation 'com.google.android.material:material:1.1.0'
-
-    // Splitties para Toast e AlertDialog, já que Anko está obsoleta
-    implementation("com.louiscad.splitties:splitties-toast:3.0.0-alpha06")
-    implementation("com.louiscad.splitties:splitties-alertdialog:3.0.0-alpha06")
-
-    // Room
-    implementation "androidx.room:room-runtime:2.2.3"
-    kapt "androidx.room:room-compiler:2.2.3"
-    implementation "androidx.room:room-ktx:2.2.3"
-
-    // Corrotinas Kotlin para Android
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
-
-    //implmentation
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    // Splitties para startActivity sem boilerplate
+    implementation("com.louiscad.splitties:splitties-activities:3.0.0-alpha06")
 }
